update ui and author

--- a/course/b.sc-pathology-course.html
+++ b/course/b.sc-pathology-course.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title> BSc Pathology Admission, Eligibility, Top Colleges | Eduprov</title>
-  <meta name="description" content="BSc pathology is concerned with diagnosis, identification, & study of diseases. Get updates on colleges 
-  admission criteria, cut-off, career & scope with EDUPROV">
+  <title>BSc Pathology Admission Eligibility Career & Scope | Eduprov</title>
+  <meta name="description" content="BSc pathology is concerned with diagnosis, identification, & study of diseases. Get updates on colleges admission criteria, cut-off, career & scope with EDUPROV
+  ">
   <meta name="keywords"
     content="B.Sc Pathology, B.Sc Pathology Admission, B.Sc Pathology Course Details, B.Sc Pathology Admission Bangalore , B.Sc Pathology Career, 
     B.Sc Pathology eligibility, B.Sc Pathology admission criteria, B.Sc Pathology Bangalore colleges, B.Sc Pathology college admission, 
@@ -16,11 +16,11 @@
      Pathology admission criteria, Pathology college admission, Pathology Bangalore colleges, Pathology Course , Pathology course admission, 
      Pathology Bangalore colleges, Pathology college admission, Pathology Course , what is  Pathology , Admission for  Pathology course ,
       Pathology Bangalore colleges admission, Pathology colleges , Pathology admissions, Pathology course admission, Pathology scope,">
-  <meta name="author" content="Naveen">
+      <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -28,7 +28,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 </head>
 
@@ -50,9 +49,9 @@
 
         <div class="navbar-nav ml-auto ">
           <div class="navbar-nav ml-auto ">
-            <a href="../index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="../contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="../student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+            <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           </div>
         </div>
 
@@ -64,13 +63,14 @@
   
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding: 50px;
   background-position: center center;
   background-size: cover;">
 
     <div class="container text-white">
       <div class="row">
         <div class="col-md-8 mt-5 pt-5">
-          <h1>B. Sc Pathology or Bachelor of Pathology  </h1>
+          <h1>B.Sc Pathology or Bachelor of Pathology</h1>
         </div>
       </div>
     </div>
@@ -78,13 +78,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-1">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white">
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -93,73 +91,64 @@
     <div class="row">
         <div class="col-md-12">
           <p class="text-justify" id="paragraph-font">
-            The <strong>Bachelor of Pathology</strong> course is an <strong>undergraduate program,</strong> in which you to understand disease from a <strong>tissue, cellular, 
-                molecular, biological, immunological, and functional perspective.</strong> In pathology, knowledge will be integrated from the range
+            <strong>Bachelor of Pathology</strong> course is an undergraduate program in which you to understand disease from a tissue, cellular, 
+                molecular, biological, immunological, and functional perspective. In pathology, knowledge will be integrated from the range
              of science disciplines from Molecular Genetics to Human Biology. The one who chooses this course will understand the human body well. 
              One who loves to know about the living being and what is happening in the human body or animals can opt for this course. This course will provide a different experience and wider knowledge.
 
             </p>
 
             <p class="text-justify" id="paragraph-font">
-                The <strong>Pathology course</strong> is specially designed for those students who want to study tissues and human organs in order to identify 
+                The Pathology courseis specially designed for those students who want to study tissues and human organs in order to identify 
                 the disease. Most of the course programs merge hands-on laboratory experience with classroom lectures. Examples of classes were 
-                undergraduates may have an opportunity to take include <strong>microbiology, cell biology, biochemistry, toxicology, and histology.</strong>
+                undergraduates may have an opportunity to take include microbiology, cell biology, biochemistry, toxicology, and histology.
             </p>
 
             <p class="text-justify" id="paragraph-font">
-               <b> Different types of animal research included in many programs for helping students in learning.</b> With <strong>bachelor's degree students </strong>
-                prepared with pathology background, then after students can choose the area of specializing such as <strong>environmental pathology, 
-                  molecular pathology or toxicology.</strong>
-
+                   Different types of animal research included in many programs for helping students in learning. With bachelor's degree students 
+                   prepared with pathology background, then after students can choose the area of specializing such as <b>environmental pathology, 
+                    molecular pathology or toxicology.</b>
                 </p>
 
             <p class="text-justify" id="paragraph-font">
-                The <strong>degree</strong> prepares students for a great career in a <strong>multiplicity of subjects.</strong> It requires two to five years duration
-                 for the completion of the course; this <strong>course </strong>is available in most of the colleges and universities all over the world. 
-                 Further details about the course and the institutions can be obtained from the <strong>EDUPROV</strong> where the experts are waiting to 
+                 The degree prepares students for a great career in a multiplicity of subjects.It requires two to five years duration
+                 for the completion of the course; this course >is available in most of the colleges and universities all over the world. 
+                 Further details about the course and the institutions can be obtained from the <b>EDUPROV</b> where the experts are waiting to 
                  assist you with their experience and expertise.
-
               </p>
-    
-
             <hr />
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
-                    B. Sc Pathology Eligibility
-                </button>
+            <h2 class="text-center text-primary" id="tag-font">
+             Eligibility
             </h2>
         </div>
 
 
-        <div class="col-md-12">
+        <div class="col-md-12 mt-2">
           <ul>
-            <li><b>The candidate must complete the 12th examination in the science stream (physics, chemistry, biology as a compulsory subject) from a recognized board with an assured percentage, are qualified to apply for the Undergraduate course. </b></li>
-            <li><b>Several medical colleges and universities offer the course in the field of Pathology.  </b></li>
-            <li><b>Most of them normally conduct at the degree and master's degree levels. </b></li>
-            <li><b>For the master's degree, graduations in any related field from a recognized University are set. </b></li>
-            <li><b>The eligibility criteria of each and every institution can be obtained from us. We, in EDUPROV, will serve you with the updated information about each and every institution that offers this course and will guide you till you get into the course</b></li>
+            <li>The candidate must complete the 12th examination in the science stream (physics, chemistry, biology as a compulsory subject) from a recognized board with an assured percentage, are qualified to apply for the Undergraduate course.</li>
+            <li>Several medical colleges and universities offer the course in the field of Pathology.</li>
+            <li>Most of them normally conduct at the degree and master's degree levels</li>
+            <li>For the master's degree, graduations in any related field from a recognized University are set</li>
+            <li>The eligibility criteria of each and every institution can be obtained from us. We, in EDUPROV, will serve you with the updated information about each and every institution that offers this course and will guide you till you get into the course</li>
   
           </ul>
             <hr />
         </div>
 
         <div class="col-md-12">
-            <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
-                    B. Sc Pathology Career & Scope
-
-                </button>
+            <h2 class="text-center text-primary" id="tag-font">
+              Career & Scope
             </h2>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 mt-3">
           <p class="text-justify" id="paragraph-font">
-            Job seekers have wide opportunities in their employment areas like <strong>hospitals, Health Agencies, Investigating Agencies, 
-           Agriculture Departments, Laboratories, Medical centers, Greenhouses, Colleges or Universities, Educational Institutes, Consultancies, etc. They may get jobs in these places and they can work as a Health Care Worker, Medical Lab Technician, Medical Examiner, Dermatopathologist, Forensic Technician, Mortuary Assistant, Cytotechnologist, Consultant, etc.</strong>
+            Job seekers have wide opportunities in their employment areas like hospitals, Health Agencies, Investigating Agencies, 
+            Agriculture Departments, Laboratories, Medical centers, Greenhouses, Colleges or Universities, Educational Institutes, Consultancies, etc. They may get jobs in these places and they can work as a Health Care Worker, Medical Lab Technician, Medical Examiner, Dermatopathologist, Forensic Technician, Mortuary Assistant, Cytotechnologist, Consultant, etc
           </p>
          
         </div>
@@ -168,6 +157,7 @@
 </div>
 <!--container end-->
 </div>
+<hr/>
 
 
 
