--- a/schools/acts-secondary-school.html
+++ b/schools/acts-secondary-school.html
@@ -4,29 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Acts Secondary School School Information, Academics,  | Eduprov</title>
+  <title>Acts Secondary School Information Academics | Eduprov</title>
   <meta name="description" content="Admission in ACTS Secondary School Bangalore with Complete Information on Admission Procedure, Documents required and lot more contact+91-9538801147
     ">
   <meta name="keywords"
-    content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, 
-    admission, admissions, counselling, counseling, bangalore counseling, abroad admission consultants, abroad education consultants, academic career coach,
-     academic consultant in bangalore, admission, admission assistance , admission consultancy in bangalore, 
-     admission consultant, admission consultant in bangalore, admission consultant near me, admission guidance, 
-     admission guidance in bangalore, admission through management quota, admission through nri quota, bangalore 
-     university, best admission consultant in bangalore, best career guidance, best college admission consultant 
-     in bangalore, best colleges in bangalore, best education consultancy in bangalore, career counselling , 
-     career guidance, college, college admission, college admission assistance, college admission consultant 
-     in bangalore, college admission counselore near me, college admission guidance, college admission in bangalore, 
-     college admission information, college admission process, college admissions advice, college admissions
-      consultant, college admissions counselor, college advisor, college consultant, college counselor, college
-       planning consultant, colleges in bangalore, direct admission, direct admission consultants, education, 
-       education admission guidance, education counsellor, educational consultants in bangalore, educational
-        guidance, foreign studies consultants, genuine admission consultant, international admissions, 
-        international education consultancy, international student admission, international university 
-        admission, mba admission assistance, nursing admission, overseas education consultant, overseas 
-        education consultants, overseas education consultants near me, para-medical colleges in bangalore, p
-        uc admission, school admission, school admission assistance, student consultants, study abroad consultant,
-        study abroad consultants in bangalore, university admission, bachelor of commerce, bachelor of commerce degree, bachelor of commerce subjects, bachelor of commerce jobs, bachelor of commerce short form, bachelor of commerce accounting and finance, bachelor of commerce meaning, bachelor of commerce in accounting and finance, bachelor of commerce canada, bachelor of commerce australia, bachelor of commerce accounting, bachelor of commerce courses, bachelor of commerce in india, bachelor of commerce result 2019">
+    content="">
   <meta name="author" content="Naveen">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
