17-05-2021 update userinterface title tags and keyword consistancy

--- a/course/b.sc-pathology-course.html
+++ b/course/b.sc-pathology-course.html
@@ -8,14 +8,8 @@
   <meta name="description" content="BSc pathology is concerned with diagnosis, identification, & study of diseases. Get updates on colleges admission criteria, cut-off, career & scope with EDUPROV
   ">
   <meta name="keywords"
-    content="B.Sc Pathology, B.Sc Pathology Admission, B.Sc Pathology Course Details, B.Sc Pathology Admission Bangalore , B.Sc Pathology Career, 
-    B.Sc Pathology eligibility, B.Sc Pathology admission criteria, B.Sc Pathology Bangalore colleges, B.Sc Pathology college admission, 
-    B.Sc Pathology Course , what is B.Sc Pathology , Admission for B.Sc Pathology course , B.Sc Pathology Bangalore colleges admission, 
-    B.Sc Pathology colleges , B.Sc Pathology admissions, B.Sc Pathology course admission, B.Sc Pathology scope, B.Sc Pathology jobs, 
-    Pathology Admission, Pathology Course Details, Pathology Admission Bangalore , Pathology Career, Pathology eligibility,
-     Pathology admission criteria, Pathology college admission, Pathology Bangalore colleges, Pathology Course , Pathology course admission, 
-     Pathology Bangalore colleges, Pathology college admission, Pathology Course , what is  Pathology , Admission for  Pathology course ,
-      Pathology Bangalore colleges admission, Pathology colleges , Pathology admissions, Pathology course admission, Pathology scope,">
+    content="B.Sc Pathology, B.Sc Pathology Admission, B.Sc Pathology Course Details, B.Sc Pathology Admission Bangalore , B.Sc Pathology Career,  B.Sc Pathology eligibility, B.Sc Pathology admission criteria, B.Sc Pathology Bangalore colleges, B.Sc Pathology college admission,  B.Sc Pathology Course , what is B.Sc Pathology , Admission for B.Sc Pathology course , B.Sc Pathology Bangalore colleges admission,  B.Sc Pathology colleges , B.Sc Pathology admissions, B.Sc Pathology course admission, B.Sc Pathology scope, B.Sc Pathology jobs,  Pathology Admission, Pathology Course Details, Pathology Admission Bangalore , Pathology Career, Pathology eligibility,  Pathology admission criteria, Pathology college admission, Pathology Bangalore colleges, Pathology Course , Pathology course admission,   Pathology Bangalore colleges, Pathology college admission, Pathology Course , what is  Pathology , Admission for  Pathology course ,   Pathology Bangalore colleges admission, Pathology colleges , Pathology admissions, Pathology course admission, Pathology scope
+    ">
       <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
@@ -187,7 +181,7 @@
         <ul class="list-unstyled mt-md-3 mt-5">
           <label style="font-weight: bold">Address</label>
           <p>
-            Address: No 20 2nd Floor<br />
+           No 20 2nd Floor<br />
             Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
             560001
           </p>
@@ -265,22 +259,22 @@
       <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
         <ul class="list-unstyled">
           <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
             <li>MBA</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
             <li>MEDICAL</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
             <li>ENGINEERING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
             <li>LAW</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
             <li>DESIGNING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
             <li>ARTS</li>
           </a>
         </ul>
