--- a/course/bachelor-in-mass-communication.html
+++ b/course/bachelor-in-mass-communication.html
@@ -8,8 +8,8 @@
   <meta name="description" content="BA Mass Communication student learn communication through different means like radio, film.Get admission in colleges,counselling scope @ EDUPROV
   ">
   <meta name="keywords"
-    content="mass media, course in mass communication, mass communication courses, courses in mass communication, courses of mass communication, mass communication course, what is mass communication, what is mass communications, journalism and mass communication, mass communication and journalism, what is mass media, mass communication meaning, means of mass communication, means of mass, media communication, mass communication media, mass media communication, medium of mass communication, mediums of mass communication, mass communication jobs, job for mass communication, mass communication job, mass communications jobs, example of mass communication, examples of mass communication, mass communication examples, jobs in mass communication, mass communication definition, mass communication meaning in Admission, define mass communication, definition of mass communication, definitions of mass communication, mass communication in Admission, types of mass communication, journalism in Admission, career in mass communication, careers in mass communication, mass communication career, mass communication careers, best college for mass communication, mass communication and journalism jobs, mass media meaning in Admission, journalism and mass communication jobs, mass communication degree, journalism colleges in bangalore, bangalore journalism colleges, journalism college in bangalore, importance of mass communication, mass media in Admission, mass communication colleges in bangalore, मास कम्युनिकेशन कोर्स फीस, journalism courses in bangalore, bjmc course details in Admission, bjmc full form in Admission, best colleges for journalism in bangalore, mass communication in Admission meaning, mass media kya hai, what is journalism in Admission, mass communication pdf, journalism and mass communication colleges in bangalore, mass communication and journalism colleges in bangalore, visual communication colleges in bangalore, mass communication colleges near me, 
-    mass communication admissions, mass communication bangalore,">
+    content="mass media, course in mass communication, mass communication courses, courses in mass communication, courses of mass communication, mass communication course, what is mass communication, what is mass communications, journalism and mass communication, mass communication and journalism, what is mass media, mass communication meaning, means of mass communication, means of mass, media communication, mass communication media, mass media communication, medium of mass communication, mediums of mass communication, mass communication jobs, job for mass communication, mass communication job, mass communications jobs, example of mass communication, examples of mass communication, mass communication examples, jobs in mass communication, mass communication definition, mass communication meaning in Admission, define mass communication, definition of mass communication, definitions of mass communication, mass communication in Admission, types of mass communication, journalism in Admission, career in mass communication, careers in mass communication, mass communication career, mass communication careers, best college for mass communication, mass communication and journalism jobs, mass media meaning in Admission, journalism and mass communication jobs, mass communication degree, journalism colleges in bangalore, bangalore journalism colleges, journalism college in bangalore, importance of mass communication, mass media in Admission, mass communication colleges in bangalore, मास कम्युनिकेशन कोर्स फीस, journalism courses in bangalore, bjmc course details in Admission, bjmc full form in Admission, best colleges for journalism in bangalore, mass communication in Admission meaning, mass media kya hai, what is journalism in Admission, mass communication pdf, journalism and mass communication colleges in bangalore, mass communication and journalism colleges in bangalore, visual communication colleges in bangalore, mass communication colleges near me, mass communication admissions, mass communication bangalore
+    ">
   <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
@@ -200,7 +200,7 @@
         <ul class="list-unstyled mt-md-3 mt-5">
           <label style="font-weight: bold">Address</label>
           <p>
-            Address: No 20 2nd Floor<br />
+             No 20 2nd Floor<br />
             Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
             560001
           </p>
@@ -278,22 +278,22 @@
       <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
         <ul class="list-unstyled">
           <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
             <li>MBA</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
             <li>MEDICAL</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
             <li>ENGINEERING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
             <li>LAW</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
             <li>DESIGNING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
             <li>ARTS</li>
           </a>
         </ul>
