--- a/course/bachelor-of-archaelogy.html
+++ b/course/bachelor-of-archaelogy.html
@@ -7,14 +7,8 @@
   <title>BA in Archaeology Admission Syllabus Scope | Eduprov</title>
   <meta name="description" content="BA in Archaeology study of ancient or recent human past through material remains, museology, ancient culture. For admission in colleges, career visit EDUPROV">
   <meta name="keywords"
-    content="who is an archaeologist, what is culture in anthropology, what is cultural anthropology, 
-    what is archeology, what is archaeology, what is archaeologist, what is anthropology, what is an 
-    archaeologist, what is an anthropology, types of archaeology, study of culture, social culture, 
-    social cultural, meaning of ethnology, linguistic anthropology branches, linguistic anthropology, 
-    how to become a linguistic anthropologist, historical linguistics anthropology, example of archaeologist, 
-    ethnology meaning in english, ethnology meaning, ethnology is the study of, ethnology and ethnography, 
-    ethnology, ethnologist meaning, ethnologist, ethnological meaning, ethnological definition, definition of archaeologist, define ethnology, define archeology, define archaeology, define archaeologist, culture in anthropology, cultural anthropology, cultural anthropologist, call system anthropology, archeology definition, archeology, archaeology sources, archaeology meaning, archaeology definition, archaeologists meaning in hindi, archaeologist meaning in hindi, archaeologist example, archaeologist, archaeological meaning, anthropology studies, anthropology meaning in tamil, anthropology meaning in marathi, anthropology meaning, anthropology linguistics, anthropology is the study of, anthropology examples, anthropology example, anthropology, anthropologist definition, anthropologist, 
-    anthropological linguistics definition, anthropological linguistics,">
+    content="who is an archaeologist, what is culture in anthropology, what is cultural anthropology,  what is archeology, what is archaeology, what is archaeologist, what is anthropology, what is an  archaeologist, what is an anthropology, types of archaeology, study of culture, social culture,  social cultural, meaning of ethnology, linguistic anthropology branches, linguistic anthropology,  how to become a linguistic anthropologist, historical linguistics anthropology, example of archaeologist,  ethnology meaning in english, ethnology meaning, ethnology is the study of, ethnology and ethnography,  ethnology, ethnologist meaning, ethnologist, ethnological meaning, ethnological definition, definition of archaeologist, define ethnology, define archeology, define archaeology, define archaeologist, culture in anthropology, cultural anthropology, cultural anthropologist, call system anthropology, archeology definition, archeology, archaeology sources, archaeology meaning, archaeology definition, archaeologists meaning in hindi, archaeologist meaning in hindi, archaeologist example, archaeologist, archaeological meaning, anthropology studies, anthropology meaning in tamil, anthropology meaning in marathi, anthropology meaning, anthropology linguistics, anthropology is the study of, anthropology examples, anthropology example, anthropology, anthropologist definition, anthropologist,  anthropological linguistics definition, anthropological linguistics
+    ">
   <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
@@ -163,9 +157,9 @@
         </div>
 
         <div class="col-md-12">
-                <h2 class="text-center text-primary" id="tag-font">
+                <h3 class="text-center text-primary" id="tag-font">
                     Top Colleges
-                </h2>
+                </h3>
        </div>
         <div class="col-md-12 mt-3">
                 <label><b>Bachelor of Arts (Hons.) in Archaeology and ancient history Colleges</b></label>
@@ -225,9 +219,9 @@
 
         <div class="row">
           <div class="col-md-12">
-              <h2 class="text-center text-primary" id="tag-font">
+              <h3 class="text-center text-primary" id="tag-font">
                     Career
-              </h2>
+              </h3>
           </div>
   
   
@@ -281,7 +275,7 @@
         <ul class="list-unstyled mt-md-3 mt-5">
           <label style="font-weight: bold">Address</label>
           <p>
-            Address: No 20 2nd Floor<br />
+            No 20 2nd Floor<br />
             Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
             560001
           </p>
@@ -359,22 +353,22 @@
       <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
         <ul class="list-unstyled">
           <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
             <li>MBA</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
             <li>MEDICAL</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
             <li>ENGINEERING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
             <li>LAW</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
             <li>DESIGNING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
             <li>ARTS</li>
           </a>
         </ul>
