17-05-2021 : update home page section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,20 @@
           speed="1" style="width: 300px; height: 300px; margin:auto;" loop autoplay></lottie-player>
       </div >
     </div>
+    <div class="row mt-2">
+     <div class="col-md-12 text-center"> 
+      <h3 class="">Eduprov's overview</h3>
+     </div>
+
+     <div class="col-md-4 bg-light">
+      <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_fqygznk9.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px; margin:auto;"  loop  autoplay></lottie-player>
+    </div>
+    <div class="col-md-8 mt-3">
+      <p class="text-justify" id="paragraph-font">
+        Eduprov Educational Institute is an educational consultancy that offers prominent services like admission guidance, career counseling, and study abroad. admission can be a tedious task. thus Eduprov acts as a chief help in providing admissions to students in top colleges of Bangalore and throughout the states of India. on the other hand career counseling is the primal need for a student to pick the right course and the right college for a better future. Eduprov helps the student in a serene way by providing career counseling with the best career counselors guiding you towards a better hand on education and the college with courses. Eduprov not just gives you the latest informations on college and admissions it helps the students get pertinent orientation on Overseas Education, universities, admissions, hostels, and visa accommodation for those willing to study abroad in any part of the world. " A good education is a foundation for a better future"
+      </p>
+    </div>
+    </div>
   </div>
 
   <div class="container mt-5 ">
